# kafka-republisher

./: Makefile  README.md  pyproject.toml  release-docker.env  release.env  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build-docker-image.yml  build.yaml  deploy-github-release-assets.yml  deploy-pypi.yml  quality-qltysh.yml  quality-sonarcloud.yml  workflow-build.yaml  workflow-deployments.yml
docker/: Dockerfile  republisher.py
docker-compose/: republisher.yaml
kubernetes/: pod.yml
scripts/: set-version.sh
src/kafka_republisher/: cli.py  config.py  kafka_client.py  processor.py  publisher.py  republisher.py
tests/: test_cli.py  test_config.py  test_kafka_client.py  test_processor.py  test_publisher.py  test_republisher.py
tests/expected-output/: cli-help.txt  cli-version.txt  cli-wrong-options.txt
