[project]
name = "kafka_republisher"
version = "0.2.0"
description = "Republish kafka message from one topic to another"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "kafka" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.12.2,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/kafka-republisher"
repository = "https://github.com/siakhooi/kafka-republisher"
documentation = "https://github.com/siakhooi/kafka-republisher/wiki"
"Bug Tracker" = "https://github.com/siakhooi/kafka-republisher/issues"

[project.scripts]
kafka-republisher = 'kafka_republisher.cli:run'


[tool.poetry]
packages = [{include = "kafka_republisher", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
