[project]
name = "kafka_republisher"
version = "1.0.0"
description = "Republish kafka message from one topic to another"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "kafka" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.12.2,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/kafka-republisher"
repository = "https://github.com/siakhooi/kafka-republisher"
documentation = "https://github.com/siakhooi/kafka-republisher/wiki"
"Bug Tracker" = "https://github.com/siakhooi/kafka-republisher/issues"

[project.scripts]
kafka-republisher = 'kafka_republisher.cli:run'


[tool.poetry]
packages = [{include = "kafka_republisher", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
